--- a/first_exercise/egm.ipynb
+++ b/first_exercise/egm.ipynb
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 1,
    "outputs": [],
    "source": [
     "%matplotlib inline\n",
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 2,
    "outputs": [],
    "source": [
     "# This is a temporary workaround; I copied the survival probabilities from https://www.ssa.gov/oact/STATS/table4c6.html\n",
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 3,
    "outputs": [],
    "source": [
     "jit_data = [\n",
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 4,
    "outputs": [],
    "source": [
     "@njit\n",
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 5,
    "outputs": [],
    "source": [
     "def solve_model(model, sigma, tol=1e-4, max_iter=1000, verbose=True, print_skip=25):\n",
@@ -208,7 +208,7 @@
     "        i += 1\n",
     "\n",
     "        if verbose and i % print_skip == 0:\n",
-    "            print(f\"Error at iteration {i} is {error}.{maxindex}\")\n",
+    "            print(f\"Error at iteration {i} is {error}.\")\n",
     "\n",
     "    if error > tol:\n",
     "        print(\"Failed to converge!\")\n",
@@ -226,33 +226,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 6,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Error at iteration 25 is 0.15386753134958386.0\n",
-      "Error at iteration 50 is 0.03889155045136983.0\n",
-      "Error at iteration 75 is 0.017151133541582375.0\n",
-      "Error at iteration 100 is 0.009487230292543503.0\n",
-      "Error at iteration 125 is 0.005929747814023889.0\n",
-      "Error at iteration 150 is 0.003996763081650201.0\n",
-      "Error at iteration 175 is 0.0028335778185055727.0\n",
-      "Error at iteration 200 is 0.0020819458034384564.0\n",
-      "Error at iteration 225 is 0.0015702565679326375.0\n",
-      "Error at iteration 250 is 0.0012079006075826904.0\n",
-      "Error at iteration 275 is 0.000943340475734189.0\n",
-      "Error at iteration 300 is 0.0007454829191188006.0\n",
-      "Error at iteration 325 is 0.0005946480237792873.0\n",
-      "Error at iteration 350 is 0.00047787435570301184.0\n",
-      "Error at iteration 375 is 0.0003863344231151977.0\n",
-      "Error at iteration 400 is 0.0003138420645620865.0\n",
-      "Error at iteration 425 is 0.0002559545720841605.0\n",
-      "Error at iteration 450 is 0.0002094132106386093.0\n",
-      "Error at iteration 475 is 0.00017178367456083254.0\n",
-      "Error at iteration 500 is 0.00014121862535854124.0\n",
-      "Error at iteration 525 is 0.00011629696953707747.0\n",
+      "Error at iteration 25 is 0.15386753134958386.\n",
+      "Error at iteration 50 is 0.03889155045136983.\n",
+      "Error at iteration 75 is 0.017151133541582375.\n",
+      "Error at iteration 100 is 0.009487230292543503.\n",
+      "Error at iteration 125 is 0.005929747814023889.\n",
+      "Error at iteration 150 is 0.003996763081650201.\n",
+      "Error at iteration 175 is 0.0028335778185055727.\n",
+      "Error at iteration 200 is 0.0020819458034384564.\n",
+      "Error at iteration 225 is 0.0015702565679326375.\n",
+      "Error at iteration 250 is 0.0012079006075826904.\n",
+      "Error at iteration 275 is 0.000943340475734189.\n",
+      "Error at iteration 300 is 0.0007454829191188006.\n",
+      "Error at iteration 325 is 0.0005946480237792873.\n",
+      "Error at iteration 350 is 0.00047787435570301184.\n",
+      "Error at iteration 375 is 0.0003863344231151977.\n",
+      "Error at iteration 400 is 0.0003138420645620865.\n",
+      "Error at iteration 425 is 0.0002559545720841605.\n",
+      "Error at iteration 450 is 0.0002094132106386093.\n",
+      "Error at iteration 475 is 0.00017178367456083254.\n",
+      "Error at iteration 500 is 0.00014121862535854124.\n",
+      "Error at iteration 525 is 0.00011629696953707747.\n",
       "\n",
       "Converged in 545 iterations.\n"
      ]
@@ -273,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 7,
    "outputs": [
     {
      "data": {
@@ -299,34 +299,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "outputs": [
     {
      "data": {
-      "text/plain": "(100,)"
+      "text/plain": "\"n = 100\\nm = Model()\\nsigma = np.tile(m.a_grid, (m.n, 1))\\nfig, ax = plt.subplots()\\n\\nax.plot(m.a_grid, sigma[34], color=plt.cm.jet(0), lw=2, alpha=0.6, label='Initial condition')\\n\\nfor i in range(n):\\n    sigma = K(sigma, m)\\n    ax.plot(m.a_grid, sigma[34], color=plt.cm.jet(i / n), lw=2, alpha=0.6)\""
      },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "(100,)"
-     },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
