fix notebook formatting

--- a/first_exercise/egm.ipynb
+++ b/first_exercise/egm.ipynb
@@ -8,16 +8,16 @@
     "Task: Optimize consumption over retirement and find optimal investment in a fairly priced annuity; investment only possible at time = 0 (age 65)\n",
     "\n",
     "### Symbols\n",
-    "$c_t$: Consumption\n",
-    "$w_t$: Wealth (beginning of period t)\n",
-    "$a_t := w_t-c_t$: End of period wealth\n",
-    "$p$: yearly payout of the annuity\n",
-    "$R := 1+r$ with $r$ being the interest rate\n",
-    "Wealth evolves according to $w_t = R * a_{t-1} + p$\n",
+    "$c_t$: Consumption \\\n",
+    "$w_t$: Wealth (beginning of period t) \\\n",
+    "$a_t := w_t-c_t$: End of period wealth \\\n",
+    "$p$: yearly payout of the annuity \\\n",
+    "$R := 1+r$ with $r$ being the interest rate \\\n",
+    "Wealth evolves according to $w_t = R * a_{t-1} + p$ \\\n",
     "$\\sigma(w_t) = c_t^{*}$: Policy function\n",
     "\n",
     "\n",
-    "$u(c) := \\frac{c^{1-\\gamma}}{1-\\gamma}$: Utility function (CRRA)\n",
+    "$u(c) := \\frac{c^{1-\\gamma}}{1-\\gamma}$: Utility function (CRRA) \\\n",
     "$\\gamma$ is the risk aversion parameter\n",
     "\n",
     "Value function V:\n",
