add new egm implementation using backward induction; solution works when annuity=0; bugs with annuity>0

--- a/first_exercise/egm.ipynb
+++ b/first_exercise/egm.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "source": [
     "## EGM implementation\n",
-    "\n",
+    "This implementation followed the examples on quantecon; A different implementation using backward induction can be found in egm2\n",
     "Task: Optimize consumption over retirement and find optimal investment in a fairly priced annuity; investment only possible at time = 0 (age 65)\n",
     "\n",
     "### Symbols\n",
