--- a/first_exercise/egm_and_vfi.ipynb
+++ b/first_exercise/egm_and_vfi.ipynb
@@ -66,10 +66,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "outputs": [],
    "source": [
     "# This is a temporary workaround; I copied the survival probabilities from https://www.ssa.gov/oact/STATS/table4c6.html\n",
+    "# s is the start age (inclusive), T the ending age (exclusive i.e. I get the probability of surviving until T)\n",
     "def get_s_prob(s, T):\n",
     "    l = np.array([0.993919, 0.999575, 0.99974, 0.999806, 0.999846, 0.999858, 0.999865, 0.999873, 0.999884, 0.999896, 0.999903, 0.999894, 0.999856, 0.99978, 0.999677, 0.999563, 0.999448, 0.999325, 0.999194, 0.999061, 0.998921, 0.998785, 0.998673, 0.998594, 0.998539, 0.998493, 0.998443, 0.99839, 0.998332, 0.998268, 0.998205, 0.998142, 0.998077, 0.998008,\n",
     " 0.997936, 0.997855, 0.997769, 0.997684, 0.997602, 0.997518, 0.99742, 0.997303, 0.997172, 0.997024, 0.996854, 0.99666, 0.996433, 0.996167, 0.995857, 0.995501,\n",
@@ -79,7 +80,9 @@
     " 0.721034, 0.701908, 0.684238, 0.66845, 0.651872, 0.634466, 0.616189, 0.5969990000000001, 0.576849, 0.5556909999999999, 0.5334760000000001, 0.510149,\n",
     " 0.485657, 0.45994, 0.432937, 0.404583, 0.37481299999999995, 0.343553, 0.310731, 0.27626799999999996,\n",
     " 0.240081, 0.20208499999999996, 0.16218900000000003, 0.12029900000000004])\n",
-    "    return l[s:T]\n",
+    "    # probability of surviving the final period = 0\n",
+    "    l[T] = 0\n",
+    "    return l[s:T+1]\n",
     "\n",
     "def get_annuity_conversion_factor(S, R):\n",
     "    accumulated_p_surv = 1\n",
@@ -135,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 3,
    "outputs": [],
    "source": [
     "class Model:\n",
@@ -196,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 4,
    "outputs": [],
    "source": [
     "def solve_egm(model):\n",
@@ -236,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 5,
    "outputs": [],
    "source": [
     "# utility, copied from quantecon; maximizes f within bounds of a and b\n",
@@ -282,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 6,
    "outputs": [],
    "source": [
     "def simulate_lifecycle(sigma_grid, m):\n",
@@ -325,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 7,
    "outputs": [],
    "source": [
     "# This function is best called with a grid size so that 100 % (grid_size-1) = 0; e.g. 11, 21, 51, 101\n",
@@ -357,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 8,
    "outputs": [],
    "source": [
     "def plot_policy_function(ax, sigma, model, model_identifier=\"\"):\n",
@@ -451,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 9,
    "outputs": [
     {
      "name": "stdout",
@@ -487,7 +490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 10,
    "outputs": [
     {
      "name": "stdout",
@@ -523,7 +526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 11,
    "outputs": [
     {
      "name": "stdout",
@@ -568,7 +571,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 12,
    "outputs": [
     {
      "name": "stdout",
@@ -607,7 +610,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 13,
    "outputs": [
     {
      "name": "stdout",
@@ -646,7 +649,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 14,
    "outputs": [
     {
      "name": "stdout",
@@ -669,7 +672,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 15,
    "outputs": [
     {
      "data": {
@@ -689,7 +692,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 15,
    "outputs": [],
    "source": [],
    "metadata": {
